force-app/main/default/objects/Timer__c/Timer__c.object-meta.xml
<CustomObject>
    <description>Time Tracker App timer for a time entry</description>
    <label>Timer</label>
    <nameField>
        <label>Timer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Timers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>