force-app/main/default/objects/Timer__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <description>Timer started date/time</description>
    <label>Start</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>