force-app/main/default/objects/Timer__c/fields/Stop__c.field-meta.xml
<CustomField>
    <fullName>Stop__c</fullName>
    <label>Stop</label>
    <type>DateTime</type>
</CustomField>