force-app/main/default/objects/Timer__c/fields/Time_Entry__c.field-meta.xml
<CustomField>
    <fullName>Time_Entry__c</fullName>
    <label>Time Entry</label>
    <referenceTo>Time_Entry__c</referenceTo>
    <relationshipLabel>Timers</relationshipLabel>
    <relationshipName>Timers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>